Template variable changes from $variable to $variable; . !!Breaking changes!!

--- a/templates/fileInfo/fileInfo.html
+++ b/templates/fileInfo/fileInfo.html
@@ -1,4 +1,4 @@
 <div class="fileInfo">
-    <p class="fileInfo_name">$filename</p>
-    <p class="fileInfo_lastModificationDate">$lastModifiedDate</p>
+    <p class="fileInfo_name">$filename;</p>
+    <p class="fileInfo_lastModificationDate">$lastModifiedDate;</p>
 </div>
