--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font: 4mm "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
+    font: 4mm "Helvetica Neue", "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
+    font-weight: 200;
 }
 
 html, body, .container {
